# monkey

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  monkey.toml
src/: cli.rs  config.rs  hotkey.rs  main.rs  monitor.rs  startup.rs  usb.rs  wake.rs
