[package]
name = "monkey"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ddc-hi = "0.4.1"
global-hotkey = "0.8.0"
nusb = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console"] }
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
